Fixed post image overflow

--- a/clone_instagram/logged.css
+++ b/clone_instagram/logged.css
@@ -81,8 +81,8 @@ header nav a{
     margin-bottom: 25px;
 }
 #main #stories .user-stories{
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
     background-color: rgb(206, 206, 206);
     border-radius: 50%;
     margin: 0 5px 0 5px;
@@ -118,13 +118,20 @@ header nav a{
     border-radius: 50%;
     margin-left: 5px; 
 }
+#main #posts #post-header a{
+    margin-left: 10px;
+}
+#main #posts #post-header #config-user-post{
+    font-size: 8px;
+    margin-left: auto; 
+    margin-right: 15px;
+}
 #main #posts #photo-post{
-    width: 100%;
-    background-color: salmon;
+    background-color: rgba(255, 255, 255);
 }
 #main #posts #photo-post img{
     width: 100%;
-    height: 110%;
+    height: 100%;
 }
 #main #posts #reactions-btns{
     background-color: rgb(250, 250, 250);
